<resources>
    <string name="app_name">LetsVoterWithCOnfidence</string>
    <string name="passowrd">Passowrd</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="click_to_login">Click to login</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="fullname">Fullname</string>
    <string name="registration">Registration</string>
    <string name="have_a_great_day">Have a great day!!</string>
    <string name="welcome">Welcome</string>
    <string name="username">Username</string>
    <string name="admin_login">Admin login</string>
    <string name="click_to_register_as_admin">Click to register as admin</string>
    <string name="go_back_to_user_login">Go back to user login</string>
    <string name="admin_registration">Admin Registration</string>
    <string name="click_to_admin_login">Click to Admin login</string>
    <string name="click_to_user_login">Click to user login</string>
    <string name="click_to_register">Click to register</string>
    <string name="go_tu_admin_dashboard">Go tu admin dashboard</string>
    <string name="delete_and_exisitng_candidate">Delete and exisitng Candidate</string>
    <string name="create_a_new_candidate">Create a new Candidate</string>
    <string name="log_out">Log Out</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="fill_candidate_details">Fill candidate details</string>
    <string name="full_name">Full Name</string>
    <string name="party_name">Party Name</string>
    <string name="enter_email_id">Enter email ID</string>
    <string name="go_back_to_admin_dashboard"><![CDATA[<- Go back to admin dashboard]]></string>
    <string name="details_of_candidate">Details of candidate</string>
    <string name="name_of_candidate">Name of candidate</string>
    <string name="create">Create</string>
    <string name="delete_candidate">Delete candidate</string>
    <string name="delete_a_candidate">Delete a candidate</string>
    <string name="name">Name</string>
    <string name="view_all_candidates">View all candidates</string>
    <string name="vote">Vote</string>
    <string name="vote_now">Vote Now</string>
    <string name="view_results">View Results</string>
    <string name="logout">Logout</string>
    <string name="rank">Rank</string>
    <string name="rank2">Rank :</string>
    <string name="votes">Votes :</string>
    <string name="go_to_admin_dashboard">Go to Admin dashboard</string>
    <string name="forgot_password_reset">Forgot password?Reset</string>
    <string name="voter">Voter</string>
    <string name="admin">Admin</string>
</resources>