<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".Createrepresentatitve"
    android:background="@drawable/adminlogin">

    <TextView
        android:id="@+id/admindashboard"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_tu_admin_dashboard">

    </TextView>
    <TextView
        android:text="@string/details_of_candidate"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="20dp"


        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_of_candidate"
            android:minHeight="48dp" >

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/party"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/party_name"
            android:minHeight="48dp" >

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:minHeight="48dp" >

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btncandidate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#BD4F4F"
        android:text="@string/create">

    </Button>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>

</LinearLayout>