<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="4dp"
    app:cardBackgroundColor="#A8D4F6"
    app:cardCornerRadius="5dp"
    app:cardUseCompatPadding="true">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">


        <TextView
            android:id="@+id/t1v"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/name"
            android:textColor="#000"
            android:textSize="25sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/t2v"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/t1v"
            android:layout_centerHorizontal="true"
            android:text="@string/party_name"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/t3v"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/t2v"
            android:layout_centerHorizontal="true"
            android:text="@string/vote"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/t4v"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/t3v"
            android:layout_centerHorizontal="true"
            android:text="@string/rank"
            android:textSize="25sp"
            android:textStyle="bold" />

    </RelativeLayout>


</androidx.cardview.widget.CardView>