<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    android:elevation="4dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">


        <TextView
            android:id="@+id/t1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/name"
            android:textColor="#000"
            android:textSize="25dp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/t2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/t1"
            android:layout_centerHorizontal="true"
            android:text="@string/party_name"
            android:textSize="23dp" />

        <TextView
            android:id="@+id/t3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/t2"
            android:layout_centerHorizontal="true"
            android:text="@string/email"
            android:textSize="23dp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>