<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:background="@drawable/admindashboard"
    tools:context=".Adminactivity">

    <TextView
        android:id="@+id/amdmindash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp"
        android:text="@string/admin_dashboard"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold">

    </TextView>
    <Button
        android:backgroundTint="#BD4F4F"
        android:id="@+id/create"
        app:cornerRadius="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_candidate">


    </Button>
    <Button
        android:backgroundTint="#BD4F4F"
        android:id="@+id/viewcandidate"
        app:cornerRadius="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_all_candidates">


    </Button>
    <Button
        android:backgroundTint="#BD4F4F"
        android:id="@+id/delete"
        app:cornerRadius="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete an existing candidate">

    </Button>
    <Button
        android:backgroundTint="#BD4F4F"
        android:id="@+id/close"
        app:cornerRadius="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Close voting lines">

    </Button>
    <Button
        android:backgroundTint="#BD4F4F"
        android:id="@+id/declare"
        app:cornerRadius="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Declare result">

    </Button>
   <Button
       android:id="@+id/logout"
       app:cornerRadius="8dp"
       android:backgroundTint="#BD4F4F"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/log_out">

   </Button>

</LinearLayout>